apps/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-bittorrent
  namespace: qbittorrent
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: bittorrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: bittorrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
  type: ClusterIP
