apps/qbittorrent/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  tls:
    certResolver: letsencrypt-production
